# CarPricePredictor-Demo

./: .dockerignore  .gitignore  .gitignore copy  .pre-commit-config.yaml  ARCHITECTURE_FLOW_GUIDE.md  EXPO_PRESENTATION_INTRO.md  EXPO_PRESENTATION_INTRO_STREAMLINED.md  MONITORING_IMPLEMENTATION_SPLUNK.md  Makefile  OBSERVABILITY_COMPLETE_GUIDE.md  PR_TEMPLATE.md  README copy.md  README.MD  TEST_RESULTS.md  data_flow_demo.py  dev-status.sh  docker-compose.dev.yml  docker-status.sh  mkdocs-temp.yml  pr_template_rendered.html  pyproject.toml  requirements.txt  vehiculos.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/.github/: pull_request_template.md
.github/.github/workflows/: ci-cd.yml  docs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  docs.yml
backend/: Dockerfile  app.py  app_monitoring.py  app_swagger.py  requirements.txt  vehiculos.json
backend/backend/: vehiculos.json
backend/modelo/: modelo.joblib
config/: .dockerignore  .pre-commit-config.yaml  docker-compose.dev.yml  mkdocs.yml
docs/: index.md
docs/api/: endpoints.md
docs/architecture/: components.md
docs/assets/css/: extra.css  mermaid.css
docs/assets/js/: custom.js
docs/backend/: readme_swagger.md
docs/cicd/: container-tagging.md  full-pipeline.md  pipeline.md
docs/development/: CHANGELOG.md  TEST_RESULTS.md
docs/jenkins/: AWS_EC2_OBSERVABILITY_SETUP.md  DEVOPS_EVALUATION_PLAN.md  DOCUMENTATION_FOR_EXPO.md  GRAPHICS.md  MONITORING_IMPLEMENTATION.md  MONITORING_IMPLEMENTATION_SPLUNK.md  OBSERVABILITY_COMPLETE_GUIDE.md
frontend/: Dockerfile  app.py  app_monitoring.py  requirements.txt
frontend/api/: __init__.py  routes.py
frontend/config/: settings.py
frontend/logic/: __init__.py  data_processor.py  predictor.py
frontend/static/css/: animations.css  style.css
frontend/static/js/: app.js
frontend/templates/: index.html  layout.html
frontend/tests/: test_api_endpoints.py  test_logic_unit.py
scripts/: dev-status.sh  docker-status.sh  start-local.sh  update-hashes.py  validate-env.py
tests/: README.md  test_backend.py  test_frontend.py  test_integration.py
